<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    app:startDestination="@+id/home">
    <fragment
        android:id="@+id/home"
        android:name="com.example.drawnav.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/profil"
        android:name="com.example.drawnav.ProfilFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profil" />
    <fragment
        android:id="@+id/setting"
        android:name="com.example.drawnav.SettingFragment"
        android:label="@string/setting" />
</navigation>