<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:background="@color/colorAccent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <ProgressBar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/simpleProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:maxHeight="10dip"
            android:minHeight="10dip"
            android:progress="50"
            android:layout_gravity="center"/>
        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="180dp"
            android:layout_height="270dp"
            android:background="@drawable/rectangle_image"
            android:id="@+id/id_image"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/id_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_title_name"
            android:textSize="23sp"
            android:text="@string/title"
            android:textColor="@color/colornetral"
            android:gravity="center"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/id_title_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Title"
            android:textColor="@color/colornetral"
            android:gravity="center"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/id_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_ori_name"
            android:textSize="23sp"
            android:text="@string/ori_title"
            android:textColor="@color/colornetral"
            android:gravity="center"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/id_ori_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_ori"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Ori"
            android:textColor="@color/colornetral"
            android:gravity="center"/>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/id_ori"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/idlin"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/button">
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_date_name"
                    android:textSize="15sp"
                    android:text="@string/rel_date"
                    android:textColor="@color/colornetral"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/iddate"
                    android:layout_width="70dp"
                    android:layout_height="54dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_date" />
                <TextView
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_date"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="Date"
                    android:textColor="@color/colornetral"
                    android:gravity="center"/>
            </LinearLayout>
            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/button">
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_lg_name"
                    android:textSize="15sp"
                    android:text="@string/language"
                    android:textColor="@color/colornetral"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/idlg"
                    android:layout_width="70dp"
                    android:layout_height="54dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_language"/>
                <TextView
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_lg"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="Language"
                    android:textColor="@color/colornetral"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            app:layout_constraintTop_toBottomOf="@id/idlin"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingBottom="10dp"
            android:id="@+id/idico"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_overview"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/idlin"
            app:layout_constraintLeft_toRightOf="@+id/idico"
            android:paddingTop="10dp"
            android:paddingBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_over_name"
            android:textSize="20sp"
            android:text="@string/overview"
            android:textColor="@color/colornetral" />
        <TextView
            app:layout_constraintTop_toBottomOf="@id/id_over_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_over"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="Over"
            android:textColor="@color/colorAccent"
            android:justificationMode="inter_word"
            android:background="@drawable/rectangle_image"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>